tests/NormalTests/paczka1/fuzzy1/36769501.err
Error in line 24: GsEnS A278 76,7
Error in line 37: 9ylCwvz A278 111,80
